<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/toolbar_color">

    <include layout="@layout/toolbar"
        android:drawableLeft="@drawable/integers"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">
        <!-- Set OnClickListener to trigger results when pressed -->
        <EditText
            android:id="@+id/integers_min"
            android:inputType="numberDecimal|numberSigned"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:hint="@string/integers_min_input" />
        <EditText
            android:id="@+id/integers_max"
            android:inputType="numberDecimal|numberSigned"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:hint="@string/integers_max_input" />
        <EditText
            android:id="@+id/integers_quantity"
            android:inputType="number"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:hint="@string/integers_quantity_input" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <!-- Set OnClickListener to trigger results when pressed -->
        <Button
            android:id="@+id/integers_button"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/integers_button" />
    </LinearLayout>

    <ListView
        android:id="@+id/integers_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp" />

</LinearLayout>